--- a/package.json
+++ b/package.json
@@ -9,12 +9,21 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
+    "eslint": "^7.13.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.1.2"
   },
   "dependencies": {
+    "@types/express": "^4.17.9",
+    "@types/mysql": "^2.15.15",
     "@types/node": "^14.14.7",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mysql": "^2.18.1",
     "typescript": "^4.0.5"
+  },
+  "scripts": {
+    "start": "ts-node src/index.ts"
   }
 }
