--- a/package.json
+++ b/package.json
@@ -15,15 +15,33 @@
     "prettier": "^2.1.2"
   },
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.9",
     "@types/mysql": "^2.15.15",
     "@types/node": "^14.14.7",
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
+    "nodemon": "^2.0.6",
     "typescript": "^4.0.5"
   },
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "start": "ts-node src/index.ts",
+    "prestart": "yarn run build",
+    "build": "tsc"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "**/*.test.ts",
+      "**/*.spec.ts",
+      ".git",
+      "node_modules"
+    ],
+    "watch": [
+      "src"
+    ],
+    "ext": "ts"
   }
 }
