--- a/package.json
+++ b/package.json
@@ -16,13 +16,19 @@
   },
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.9",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/ms": "^0.7.31",
     "@types/mysql": "^2.15.15",
     "@types/node": "^14.14.7",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "ms": "^2.1.2",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.6",
     "typescript": "^4.0.5"
