--- a/package.json
+++ b/package.json
@@ -22,15 +22,18 @@
     "@types/ms": "^0.7.31",
     "@types/mysql": "^2.15.15",
     "@types/node": "^14.14.7",
+    "@types/socket.io": "^2.1.11",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "ms": "^2.1.2",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.6",
+    "socket.io": "^3.0.3",
     "typescript": "^4.0.5"
   },
   "scripts": {
