--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.9",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/lodash": "^4.14.165",
     "@types/ms": "^0.7.31",
     "@types/mysql": "^2.15.15",
     "@types/node": "^14.14.7",
@@ -30,6 +31,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
     "ms": "^2.1.2",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.6",
